--- a/pages/warehouse/warehouse.wxss
+++ b/pages/warehouse/warehouse.wxss
@@ -4,11 +4,24 @@ page{
     height: 100%;
 }
 
-.button_box{
+.tab_box{
     display: flex;
 }
-.button_box button{
-    width: 100%;
+.tab_box button{
+    text-align: center;
+    width: 99%;
+    border-radius: 0px; 
+    border: 1px solid #e7e7eb;
+    background: #f7f7f7;
+    height: 40px;
+    line-height: 40px;
+}
+.tab_box button::after{
+    border: none;
+    border-radius: none;
+}
+.tab_box .hover{
+    background: #E6F3F9;
 }
 .content{
     margin: 10px;
@@ -40,6 +53,40 @@ page{
     top: 0;
 }
 
+.tip_box{
+    color: #999;
+    font-size: 12px;
+    text-align: center;
+}
+
+.chart-item{
+    margin: 0 auto;
+    margin-top: 20px;
+    text-align: center;
+}
+.canvas {
+    width: 350px;
+    height: 300px;
+    text-align: center;
+}  
+.check_box{
+    display: flex; 
+    flex-flow: row wrap; 
+    justify-content: space-between;
+    align-items: space-between;
+    font-size: 12px;
+}
+.checkbox{
+    padding: 5px;
+}
+
+.confirm_reset{
+    margin-top: 10px;
+    text-align: center;
+}
+.confirm_reset button{
+    margin: 5px;
+}
 
 /* table样式 */
 .table {
@@ -74,20 +121,3 @@ page{
   height: 3rem;
   align-items: center;
 }
-
-.tip_box{
-    color: #999;
-    font-size: 12px;
-    text-align: center;
-}
-
-.chart-item{
-    margin: 0 auto;
-    margin-top: 20px;
-    text-align: center;
-}
-.canvas {
-    width: 350px;
-    height: 200px;
-    text-align: center;
-}  
