--- a/pages/brands/brands.wxss
+++ b/pages/brands/brands.wxss
@@ -1,1 +1,142 @@
 /* pages/brands/brands.wxss */
+
+page {
+    background: #eee;
+    height: 100%;
+}
+
+.tab_box {
+    display: flex;
+}
+
+.tab_box button {
+    text-align: center;
+    width: 99%;
+    border-radius: 0px;
+    border: 1px solid #e7e7eb;
+    background: #f7f7f7;
+    height: 40px;
+    line-height: 40px;
+}
+
+.tab_box button::after {
+    border: none;
+    border-radius: none;
+}
+
+.tab_box .hover {
+    background: #e6f3f9;
+}
+
+.content {
+    margin: 10px;
+}
+
+.top text {
+    color: #666;
+}
+
+.fa-filter {
+    color: #909399;
+    font-size: 20px;
+    float: right;
+    margin-right: 10px;
+}
+
+.flex_img {
+    display: flex;
+    font-size: 14px;
+}
+
+.flex_img text {
+    font-weight: bold;
+}
+
+.filter_box {
+    width: 200px;
+    height: 100%;
+    background: #fff;
+    position: fixed;
+    right: 0;
+    top: 0;
+}
+
+.tip_box {
+    color: #999;
+    font-size: 12px;
+    text-align: center;
+}
+
+.chart-item {
+    margin: 0 auto;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.canvas {
+    width: 350px;
+    height: 300px;
+    text-align: center;
+}
+
+.check_box {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: space-between;
+    font-size: 12px;
+}
+
+.checkbox {
+    padding: 5px;
+}
+
+.confirm_reset {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.confirm_reset button {
+    margin: 5px;
+}
+
+/* table样式 */
+
+.table {
+    border: 0px solid darkgray;
+    margin-top: 10px;
+}
+
+.tr {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    height: 3rem;
+    align-items: center;
+}
+
+.td {
+    width: 40%;
+    justify-content: center;
+    text-align: center;
+    font-size: 14px;
+}
+
+.bg-w {
+    background: snow;
+}
+
+.bg-g {
+    background: #e6f3f9;
+}
+
+.th {
+    width: 40%;
+    justify-content: center;
+    background: #36f;
+    color: #fff;
+    display: flex;
+    height: 3rem;
+    align-items: center;
+    font-size: 14px;
+}
