--- a/pages/warehouse/warehouse.wxss
+++ b/pages/warehouse/warehouse.wxss
@@ -1,50 +1,58 @@
 /* pages/warehouse/warehouse.wxss */
-page{
-    background: #eeeeee;
+
+page {
+    background: #eee;
     height: 100%;
 }
 
-.tab_box{
+.tab_box {
     display: flex;
 }
-.tab_box button{
+
+.tab_box button {
     text-align: center;
     width: 99%;
-    border-radius: 0px; 
+    border-radius: 0px;
     border: 1px solid #e7e7eb;
     background: #f7f7f7;
     height: 40px;
     line-height: 40px;
 }
-.tab_box button::after{
+
+.tab_box button::after {
     border: none;
     border-radius: none;
 }
-.tab_box .hover{
-    background: #E6F3F9;
+
+.tab_box .hover {
+    background: #e6f3f9;
 }
-.content{
+
+.content {
     margin: 10px;
 }
-.top text{
+
+.top text {
     color: #666;
 }
-.fa-filter{
+
+.fa-filter {
     color: #909399;
     font-size: 20px;
     float: right;
-     margin-right: 10px; 
+    margin-right: 10px;
 }
 
-.flex_img{
+.flex_img {
     display: flex;
     font-size: 14px;
 }
-.flex_img text{
-        font-weight: bold;
+
+.flex_img text {
+    font-weight: bold;
 }
 
-.filter_box{
+.filter_box {
     width: 200px;
     height: 100%;
     background: #fff;
@@ -53,71 +61,82 @@ page{
     top: 0;
 }
 
-.tip_box{
+.tip_box {
     color: #999;
     font-size: 12px;
     text-align: center;
 }
 
-.chart-item{
+.chart-item {
     margin: 0 auto;
     margin-top: 20px;
     text-align: center;
 }
+
 .canvas {
     width: 350px;
     height: 300px;
     text-align: center;
-}  
-.check_box{
-    display: flex; 
-    flex-flow: row wrap; 
+}
+
+.check_box {
+    display: flex;
+    flex-flow: row wrap;
     justify-content: space-between;
     align-items: space-between;
     font-size: 12px;
 }
-.checkbox{
+
+.checkbox {
     padding: 5px;
 }
 
-.confirm_reset{
+.confirm_reset {
     margin-top: 10px;
     text-align: center;
 }
-.confirm_reset button{
+
+.confirm_reset button {
     margin: 5px;
 }
 
 /* table样式 */
+
 .table {
-  border: 0px solid darkgray;
-  margin-top: 10px;
+    border: 0px solid darkgray;
+    margin-top: 10px;
 }
+
 .tr {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  height: 3rem;
-  align-items: center;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    height: 3rem;
+    align-items: center;
 }
+
 .td {
-    width:40%;
+    width: 40%;
     justify-content: center;
     text-align: center;
     font-size: 14px;
 }
-.bg-w{
-   background: snow; 
+
+.bg-w {
+    background: snow;
 }
-.bg-g{
-  background: #E6F3F9;
+
+.bg-g {
+    background: #e6f3f9;
 }
+
 .th {
-  width: 40%;
-  justify-content: center;
-  background: #3366FF;
-  color: #fff;
-  display: flex;
-  height: 3rem;
-  align-items: center;
+    width: 40%;
+    justify-content: center;
+    background: #36f;
+    color: #fff;
+    display: flex;
+    height: 3rem;
+    align-items: center;
+    font-size: 14px;
 }
