--- a/pages/brands/brands.wxss
+++ b/pages/brands/brands.wxss
@@ -61,6 +61,12 @@ page {
     top: 0;
 }
 
+.button_all{
+    margin-top: 10px;
+    height: 30px;
+    line-height: 30px;
+}
+
 .tip_box {
     color: #999;
     font-size: 12px;
